--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "ww-lang-ouispoon",
+    "name": "ww-lang-triangle",
     "type": "wwObject",
     "wewebPublic": "true",
     "repository": {
         "type": "git",
-        "url": "https://github.com/WeWeb-Public/ww-map"
+        "url": "https://github.com/WeWeb-Public/ww-lang-triangle"
     },
-    "version": "0.0.7",
+    "version": "0.0.1",
     "private": true,
     "scripts": {
         "build": "weweb-build",
@@ -21,8 +21,12 @@
         "@vue/cli-plugin-eslint": "^3.0.5",
         "@vue/cli-service": "^3.0.5",
         "autoprefixer": "^9.4.3",
+        "babel-core": "^6.26.3",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-async-to-generator": "^6.24.1",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2015-node6": "^0.4.0",
         "cache-loader": "^1.2.5",
         "css-loader": "^0.28.11",
         "node-sass": "^4.11.0",
@@ -33,9 +37,9 @@
         "vue-loader": "^15.2.2",
         "vue-style-loader": "^4.1.0",
         "vue-template-compiler": "^2.5.16",
-        "webpack": "^4.9.1",
-        "webpack-cli": "^2.1.4",
-        "webpack-dev-server": "^3.1.4",
+        "webpack": "^4.32.2",
+        "webpack-cli": "^3.3.2",
+        "webpack-dev-server": "^3.4.1",
         "weweb-client": "^1.0.33"
     },
     "browserslist": [
