--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "scripts": {
         "build": "weweb-build",
         "serve": "weweb-serve",
+        "serve-front": "weweb-serve-front",
         "upload": "weweb-upload"
     },
     "dependencies": {
@@ -37,9 +38,9 @@
         "vue-loader": "^15.2.2",
         "vue-style-loader": "^4.1.0",
         "vue-template-compiler": "^2.5.16",
-        "webpack": "^4.32.2",
+        "webpack": "^4.33.0",
         "webpack-cli": "^3.3.2",
-        "webpack-dev-server": "^3.4.1",
+        "webpack-dev-server": "^3.6.0",
         "weweb-client": "^1.0.33"
     },
     "browserslist": [
