--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-    "name": "ww-lang-triangle",
-    "type": "wwObject",
-    "wewebPublic": "true",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/WeWeb-Public/ww-lang-triangle"
-    },
-    "version": "0.0.2",
-    "private": true,
-    "scripts": {
-        "build": "weweb-build",
-        "serve": "weweb-serve",
-        "serve-front": "weweb-serve-front",
-        "upload": "weweb-upload"
-    },
-    "dependencies": {
-        "vue": "^2.6.10"
-    },
-    "devDependencies": {
-        "weweb-client": "^1.0.48"
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ]
+	"name": "ww-lang-triangle",
+	"type": "wwObject",
+	"wewebPublic": "true",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/WeWeb-Public/ww-lang-triangle"
+	},
+	"version": "0.0.2",
+	"private": true,
+	"scripts": {
+		"build": "weweb-build",
+		"serve": "weweb-serve",
+		"create-config": "weweb-config"
+	},
+	"dependencies": {
+		"vue": "^2.6.11"
+	},
+	"devDependencies": {
+		"weweb-client": "^1.1.1"
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
